# whTavernSimulator

./: .env.example  .env.production  .gitignore  .vercelignore  ACCESSIBILITY_IMPROVEMENTS.md  ACHIEVEMENTS.md  AGENT_PERSONALITY_PROFILES.md  AI_CONFIGURATION_GUIDE.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_SUMMARY.txt  Dockerfile  INTERACTIVE_SYSTEMS_DOCUMENTATION.md  MANUAL_DEPLOYMENT_INSTRUCTIONS.md  README.md  VERCEL_ENV_SETUP.md  app.py  app.vue  app_enhanced_ui.py  app_production.py  completion_report.json  config.py  crewai_app.py  deploy.bat  deploy_simple.ps1  deploy_vercel.ps1  deployment_info.json  docker-compose.yml  feature_matrix.json  health_endpoints.py  main.py  netlify.toml  nuxt.config.ts  package-lock.json  package.json  package_info.json  playwright.config.ts  pyproject.toml  requirements.txt  requirements_crewai.txt  requirements_vercel.txt  (+8 more)
agents/: __init__.py  base_agent.py  czempion.py  karczmarz.py  skrytobojca.py  wiedzma.py  zwiadowca.py
api/: agent_endpoints.py  crewai_integration.py  fastapi_server.py  index.py  requirements.txt  websocket_manager.py
assets/: visual-assets-manifest.json
components/: __init__.py  agent_response_animator.py  enhanced_dashboard.py  gsap_renderer.py  gsap_renderer_enhanced.py  gsap_ultra_native.py  matrix_audio_system.py  matrix_chat_integration.py  matrix_chat_interface.py  matrix_performance_optimizer.py  responsive_design.py  threejs_integration.py
composables/: useAINPCSystem.ts  useAnimation.ts  useDeviceCapabilities.ts  useEnhancedAINPCSystem.ts  useEnhancedUserEngagement.ts  useGMCollaboration.ts  useImageOptimization.ts  useInteractiveTavernSystems.ts  useItemGenerator.ts  useNPCGenerator.ts  usePerformanceMonitoring.ts  useQuestGenerator.ts  useScreenReader.ts  useUnifiedAIService.ts  useWarhammerAgents.ts  useWarhammerAgentsExtended.ts  useWarhammerData.ts  useWarhammerIcons.ts  useWarhammerImages.ts  useWarhammerTheme.ts
core/: __init__.py  character.py  character_generator.py  dice_system.py  enums.py  event.py  tavern.py  tavern_generator.py  tavern_simulator.py
crewai_env/: pyvenv.cfg
docs/: ADVANCED_3D_ANIMATION_RESEARCH.md  ADVANCED_DEPLOYMENT_GUIDE.md  ANIMATION_PERFORMANCE_COMPARISON.md  COMPREHENSIVE_IMPROVEMENTS_SUMMARY.md  CONFIGURATION_VERIFICATION_REPORT.md  CONVERSATION_SYSTEM_SUMMARY.md  DEPLOYMENT_COMPLETE_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_README.md  DEPLOYMENT_SUMMARY.md  ENHANCED_UI_README.md  FEATURES.md  FINAL_ACHIEVEMENTS.md  FINAL_STATUS_REPORT.md  GAME_MASTER_TOOLS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INSPIRA_UI_AUDIT.md  MATRIX_CHAT_FINAL_SUMMARY.md  MATRIX_CHAT_README.md  MATRIX_CHAT_SUMMARY.md  MODULAR_ARCHITECTURE_COMPLETE.md  PHASE_2_TECHNICAL_ASSESSMENT.md  PHASE_3_IMPLEMENTATION_PRIORITIES.md  PHASE_4_DELIVERABLES.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READINESS_REPORT.md  README_VERCEL.md  SPARK_WORKFLOW_ACHIEVEMENT.md  ULTRA_ANIMATED_README.md  ULTRA_NATIVE_DEPLOYMENT.md  ULTRA_NATIVE_ENHANCEMENT_SUMMARY.md  ULTRA_NATIVE_GSAP_README.md  ULTRA_NATIVE_TUTORIAL.md  UV_SETUP_GUIDE.md  VERCEL_DEPLOYMENT_GUIDE.md  VUE_COMPONENT_OPTIMIZATION_PLAN.md  WARHAMMER_CONTENT_GENERATOR_PLAN.md  WARHAMMER_FEATURES_SUMMARY.md  WARHAMMER_V3_DESIGN_SYSTEM.md  WARHAMMER_V3_MIGRATION_STRATEGY.md
examples/: enhanced_live_tavern.py  fixed_matrix_chat_demo.py  live_tavern_chat.py  matrix_chat_demo.py  ultra_native_demo.py
gui/: __init__.py  character_panel.py  interaction_panel.py  log_panel.py  main_window.py  relationship_graph.py  tavern_panel.py
layouts/: default.vue
locales/: en.json  pl.json
pages/: about.vue  battle.vue  characters.vue  generators.vue  gm-dashboard.vue  index.vue  inspira-test.vue  inventory.vue  map.vue  settings.vue  tavern.vue  test-components.vue
playwright-report/: index.html
scripts/: deploy_production.py  deploy_vercel.py  start_production.sh  uv_setup.py  validate-configuration.js  validate_deployment.py
services/: __init__.py  agent_manager.py  agent_memory.py  cerebras_service.py  health_monitor.py  llm_service.py  narrative_engine.py  tavern_economy.py
test-results/: .last-run.json  results.json  results.xml
tests/: TEST_RESULTS.md  accessibility.spec.ts  ai-agent-system.spec.ts  basic-functionality.spec.ts  comprehensive-functionality.spec.ts  configuration.test.ts  core-functionality.spec.ts  cross-browser.spec.ts  e2e-workflows.spec.ts  inspira-components.spec.ts  inspira-ui-components.spec.ts  interactive-features.spec.ts  (+38 more)
(+134 files in other folders)
